Pres branding and tweaks

--- a/CapstoneRPres-rpubs.html
+++ b/CapstoneRPres-rpubs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Elementary Text Prediction</title>
+  <title>PhraseMaster</title>
     
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -749,16 +749,17 @@ hljs.initHighlightingOnLoad();
   <div class="slides">
 
 <section data-state="section" data-transition="linear" data-transition-speed="default">
-<h1>Elementary Text Prediction</h1><p></p>
+<h1>PhraseMaster</h1><p></p>
 
 <div class="slideContent" >
-<p>A JHU Data Science Specialization Capstone Project</p>
+<p>A JHU Data Science Specialization Capstone Project
+Featuring Elementary Text Prediction</p>
 
 <p>Wat Hughes</p>
 
 <p><a href="mailto:wat.hughes@gmail.com">wat.hughes@gmail.com</a></p>
 
-<p>January 15, 2016</p>
+<p>January 23, 2016</p>
 
 </div>
 
@@ -776,7 +777,7 @@ hljs.initHighlightingOnLoad();
 <section data-transition="linear" data-transition-speed="default">
 <h3>The Application</h3>
 <div class="slideContent" >
-<p>This application helps authors who are typing a phrase and need an idea for the next word. There are two modes  for distinct writing styles. The first mode helps Twitter users compose their Tweets. The second mode helps with longer and more formal pieces of writing. Each mode is available on its own tab. The user can go back and forth as needed.</p>
+<p>The PhraseMaster application helps authors who are typing a phrase and need an idea for the next word. There are two modes for distinct writing styles. The first mode helps Twitter users compose their Tweets. The second mode helps with longer and more formal pieces of writing. Each mode is available on its own tab. The user can go back and forth as needed.</p>
 
 <p>The application keeps track of everything the author writes, each predicted next word, and each word chosen by the user. That information is on the last tab.</p>
 
@@ -788,14 +789,13 @@ hljs.initHighlightingOnLoad();
 <section data-transition="linear" data-transition-speed="default">
 <h3>Try It</h3>
 <div class="slideContent" >
-<p>This application is deployed to the web courtesy of R Studio and ShinyApps.io. Try it here: <a href="https://wathughes.shinyapps.io/Capstone/">https://wathughes.shinyapps.io/Capstone/</a> and let me know what you think.</p>
+<p>This application is deployed to the web courtesy of R Studio and ShinyApps.io. Try it here: <a href="https://wathughes.shinyapps.io/Capstone/">https://wathughes.shinyapps.io/Capstone/</a>.</p>
 
-<p>Note that the size of the ngram models were severely limited to accommodate the RAM limits of the free hosting at ShinyApps.io.</p>
+<p>Note that the sizes of the ngram models were severely limited to accommodate the RAM limits of the free hosting at ShinyApps.io and to permit speedy response to the user.</p>
 
 <p>This application was developed as part of the Johns Hopkins University Data Science Specialization For more info: <a href="https://www.coursera.org/specializations/jhu-data-science/">https://www.coursera.org/specializations/jhu-data-science/</a>.</p>
 
-<p>Thanks to Hans Christensen of HC Corpora for the data (via Coursera:
-<a href="https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip">https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip</a>) used to train the models that drive the predictions. For more information about this data: <a href="http://www.corpora.heliohost.org/">http://www.corpora.heliohost.org/</a>.</p>
+<p>Thanks to Hans Christensen of HC Corpora for the data: <a href="https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip">https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip</a> This was used to train the models that drive the predictions. For more information about this data: <a href="http://www.corpora.heliohost.org/">http://www.corpora.heliohost.org/</a>.</p>
 
 </div>
 
